# dbprofile

./: .env.example  .gitignore  CLAUDE.md  README.md  dbprofile_prompt.md  eda_helpers.py  eda_helpers_call_templates.py  eda_profile.py  pyproject.toml
.github/workflows/: ci.yml
assets/: EDA_best_standard_practices.md  html_report_tech_spec.md  notebook_feature_plan.md  prompt_01_report_redesign.md  prompt_01_report_redesign_v03-4.docx  prompt_01_report_redesign_v03.md
dbprofile/: __init__.py  cli.py  config.py  orchestrator.py  output_dir.py
dbprofile/checks/: __init__.py  base.py  format_validation.py  frequency_distribution.py  null_density.py  numeric_distribution.py  row_count.py  sample_rows.py  schema_audit.py  temporal_consistency.py  uniqueness.py
dbprofile/connectors/: __init__.py  base.py
dbprofile/notebook/: __init__.py  backup.py  cells.py  classify.py  generator.py  helper_copy.py  notebook_writer.py  state.py
dbprofile/notebook/sections/: __init__.py  (+8 more)
dbprofile/report/: excel_export.py  renderer.py  template.html.j2
examples/: config.yaml  config_dev.yaml  config_snowflake.yaml  config_snowflake_marts_DEPRECATE.yaml
scripts/: seed_dev.py
tests/: conftest.py  test_cells.py  test_check_definitions.py  test_checks.py  test_classify.py  test_helper_copy.py  test_notebook_config.py  test_notebook_e2e.py  test_notebook_writer.py  test_output_dir.py  test_run_exports.py  test_s00_header.py  test_s01_setup.py  test_s02_data_gather.py  test_s03_grain.py  test_s04_univariate.py  test_s05_bivariate.py  test_s06_temporal.py  test_s07_dq_followup.py
(+1 files in other folders)
